--- a/site/public/buy.html
+++ b/site/public/buy.html
@@ -40,18 +40,18 @@
 </div>
             <footer>
                  <div class="column1">
-                <p>Gamlestaden</p>
-                <p>Kärra</p>
+                <p><a href="map.html">Gamlestaden</a></p>
+                <p><a href="map.html">Kärra</a></p>
                 <p>© 2018</p>
             </div>
             <div class="column2">
-                <p>Hovås</p>
-                <p>Landvetter</p>
+                <p><a href="map.html">Hovås</a></p>
+                <p><a href="map.html">Landvetter</a></p>
                 <p>1337-Gym AB</p>
             </div>
             <div class="column3">
-                <p>Kullavik</p>
-                <p>Stenungsund</p>
+                <p><a href="map.html">Kullavik</a></p>
+                <p><a href="map.html">Stenungsund</a></p>
             </div>
             </footer>
         </div>
