--- a/site/public/map.html
+++ b/site/public/map.html
@@ -21,12 +21,11 @@
                 </div>
                 <i class="material-icons menu_button" onclick="toggleMenu()">menu</i>
             </header>
-            <div class="home1">
-    <h1>Av proffs - För proffs</h1>
+            <div class="image">
+
 </div>
-<div class="home2">
-    <p>För elitidrottaren på resande fot till dig som bara vill ha professionell träning</p>
-</div>
+
+
             <footer>
                  <div class="column1">
                 <p><a href="map.html">Gamlestaden</a></p>
