--- a/site/public/login.html
+++ b/site/public/login.html
@@ -29,32 +29,18 @@
                 </div>
                 <i class="material-icons menu_button" onclick="toggleMenu()">menu</i>
             </header>
-            <div class="book">
-    <div class="personal">
-        <h1>Personlig Tränare</h1>
-        <div class="col1">
-            <h2>Noa</h2>
-            <h2>Josuf</h2>
-        </div>
-        <div class="col2">
-            <h2>Jonas</h2>
-            <h2>Julia</h2>
-        </div>
-        <div class="col3">
-            <h2>Wilma</h2>
-            <h2>Ida</h2>
-        </div>
+            <div class="account">
+    <div class="login">
+        <h1>Logga In</h1>
+        <input type="text" placeholder="Användarnamn">
+        <input type="password" placeholder="Lösenord">
+        <button>Logga In</button>
     </div>
-    <div class="group">
-        <h1>Gruppträning</h1>
-        <div class="col4">
-            <h2>Zumba</h2>
-            <h2>Yoga</h2>
-        </div>
-        <div class="col5">
-            <h2>Body Pump</h2>
-            <h2>Crossfit</h2>
-        </div>
+    <div class="register">
+        <h1>Skapa konto</h1>
+        <input type="text" placeholder="Användarnamn">
+        <input type="password" placeholder="Lösenord">
+        <button>Skapa</button>
     </div>
 </div>
             <footer>
