--- a/site/public/buy.html
+++ b/site/public/buy.html
@@ -9,14 +9,22 @@
     <body>
         <div class="container">
             <header>
-                <h1>1337-Gym</h1>
-                <div class="menu">
+            <h1>1337-Gym</h1>
+                <div class="desk_menu">
+                <h2><a href="home.html">Hem</a></h2>
+                <h2><a href="buy.html">Bli Medlem</a></h2>
+                <h2><a href="book.html">Personlig Träning</a></h2>
+                <h2><a href="book.html">Gruppträning</a></h2>
+                <h2><a href="login.html">Logga In</a></h2>
+                </div>
+                <div class="mobile_menu">
                         <i class="material-icons" onclick="toggleMenu()">close</i>
                         <ul>
                             <li><a href="home.html">Hem</a></li>
                             <li><a href="buy.html">Bli Medlem</a></li>
                             <li><a href="book.html">Personlig Träning</a></li>
                             <li><a href="book.html">Gruppträning</a></li>
+                            <li><a href="login.html">Logga In</a></li>
                         </ul>
                 </div>
                 <i class="material-icons menu_button" onclick="toggleMenu()">menu</i>
@@ -37,7 +45,7 @@
     <h1>Diamant</h1>
     <h2>500 kr/mån</h2>
     <button>Välj</button>
-</div>
+</div>
             <footer>
                  <div class="column1">
                 <p><a href="map.html">Gamlestaden</a></p>
