--- a/site/public/map.html
+++ b/site/public/map.html
@@ -11,11 +11,11 @@
             <header>
             <h1>1337-Gym</h1>
                 <div class="desk_menu">
-                <h2><a href="home.html">Hem</a></h2>
-                <h2><a href="buy.html">Bli Medlem</a></h2>
-                <h2><a href="book.html">Personlig Träning</a></h2>
-                <h2><a href="book.html">Gruppträning</a></h2>
-                <h2><a href="login.html">Logga In</a></h2>
+                <h2 class="home"><a href="home.html">Hem</a></h2>
+                <h2 class="member"><a href="buy.html">Bli Medlem</a></h2>
+                <h2 class="personal_t"><a href="book.html">Personlig Träning</a></h2>
+                <h2 class="group_t"><a href="book.html">Gruppträning</a></h2>
+                <h2 class="login_m"><a href="login.html">Logga In</a></h2>
                 </div>
                 <div class="mobile_menu">
                         <i class="material-icons" onclick="toggleMenu()">close</i>
@@ -33,7 +33,7 @@
 
 </div>
 
-
+
             <footer>
                  <div class="column1">
                 <p><a href="map.html">Gamlestaden</a></p>
