layout, buy, book för desktop

--- a/site/public/book.html
+++ b/site/public/book.html
@@ -11,11 +11,13 @@
             <header>
             <h1>1337-Gym</h1>
                 <div class="desk_menu">
-                <h2 class="home"><a href="home.html">Hem</a></h2>
-                <h2 class="member"><a href="buy.html">Bli Medlem</a></h2>
-                <h2 class="personal_t"><a href="book.html">Personlig Träning</a></h2>
-                <h2 class="group_t"><a href="book.html">Gruppträning</a></h2>
-                <h2 class="login_m"><a href="login.html">Logga In</a></h2>
+                    <ul>
+                        <li><a href="home.html">Hem</a></li>
+                        <li><a href="buy.html">Bli Medlem</a></li>
+                        <li><a href="book.html">Personlig Träning</a></li>
+                        <li><a href="book.html">Gruppträning</a></li>
+                        <li><a href="login.html">Logga In</a></li>
+                    </ul>
                 </div>
                 <div class="mobile_menu">
                         <i class="material-icons" onclick="toggleMenu()">close</i>
@@ -29,7 +31,7 @@
                 </div>
                 <i class="material-icons menu_button" onclick="toggleMenu()">menu</i>
             </header>
-            <div class="book">
+            <div class="book_mobile">
     <div class="personal">
         <h1>Personlig Tränare</h1>
         <div class="col1">
@@ -56,7 +58,34 @@
             <h2>Crossfit</h2>
         </div>
     </div>
-</div>
+</div>
+
+<div class="book_desk">
+    <div class="personal">
+        <h1>Personlig Träning</h1>
+        <div class="col1">
+            <h2>Noa</h2>
+            <h2>Wilma</h2>
+            <h2>Julia</h2>
+        </div>
+        <div class="col2">
+            <h2>Jonas</h2>
+            <h2>Josuf</h2>
+            <h2>Ida</h2>
+        </div>
+    </div>
+    <div class="group">
+        <h1>Gruppträning</h1>
+        <div class="col3">
+            <h2>Zumba</h2>
+            <h2>Yoga</h2>
+        </div>
+        <div class="col4">
+            <h2>Body Pump</h2>
+            <h2>Crossfit</h2>
+        </div>
+    </div>
+</div>
             <footer>
                  <div class="column1">
                 <p><a href="map.html">Gamlestaden</a></p>
