--- a/site/public/home.html
+++ b/site/public/home.html
@@ -11,11 +11,13 @@
             <header>
             <h1>1337-Gym</h1>
                 <div class="desk_menu">
-                <h2 class="home"><a href="home.html">Hem</a></h2>
-                <h2 class="member"><a href="buy.html">Bli Medlem</a></h2>
-                <h2 class="personal_t"><a href="book.html">Personlig Träning</a></h2>
-                <h2 class="group_t"><a href="book.html">Gruppträning</a></h2>
-                <h2 class="login_m"><a href="login.html">Logga In</a></h2>
+                    <ul>
+                        <li><a href="home.html">Hem</a></li>
+                        <li><a href="buy.html">Bli Medlem</a></li>
+                        <li><a href="book.html">Personlig Träning</a></li>
+                        <li><a href="book.html">Gruppträning</a></li>
+                        <li><a href="login.html">Logga In</a></li>
+                    </ul>
                 </div>
                 <div class="mobile_menu">
                         <i class="material-icons" onclick="toggleMenu()">close</i>
@@ -38,7 +40,7 @@
 <div class="desk_home">
     <div class="slogan"><h1>Av proffs - För proffs</h1></div>
     <div class="info"><p>För elitidrottaren på resande fot till dig som bara vill ha professionell träning</p></div>
-</div>
+</div>
             <footer>
                  <div class="column1">
                 <p><a href="map.html">Gamlestaden</a></p>
