--- a/site/public/login.html
+++ b/site/public/login.html
@@ -31,7 +31,7 @@
                 </div>
                 <i class="material-icons menu_button" onclick="toggleMenu()">menu</i>
             </header>
-            <div class="account">
+            <div class="account_mobile">
     <div class="login">
         <h1>Logga In</h1>
         <input type="text" placeholder="Användarnamn">
@@ -42,6 +42,21 @@
         <h1>Skapa konto</h1>
         <input type="text" placeholder="Användarnamn">
         <input type="password" placeholder="Lösenord">
+        <button>Skapa</button>
+    </div>
+</div>
+
+<div class="account_desk">
+    <div class="login">
+        <h1>Logga In</h1>
+        <input class="input1" type="text" placeholder="Användarnamn">
+        <input class="input2" type="password" placeholder="Lösenord">
+        <button>Logga In</button>
+    </div>
+    <div class="register">
+        <h1>Skapa konto</h1>
+        <input class="input3" type="text" placeholder="Användarnamn">
+        <input class="input4" type="password" placeholder="Lösenord">
         <button>Skapa</button>
     </div>
 </div>
